--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>ES6 Practices</title>
 </head>
 <body>
+
+<!--<script type="text/javascript" src="constructor/constructor.js"/>-->
+<!--<script type="text/javascript" src="GET_SET/get_set.js"/>-->
+<!--<script type="text/javascript" src="properties/properties.js"/>-->
 <script type="text/javascript" src="inheritance/inheritance.js"/>
 </body>
 </html>
